--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="logo">Karen Marques</div>
       <nav>
         <a href="#apresentacao">Apresentação</a>
-        <a href="#portfolio">Portfólio</a>
         <a href="#certificacoes">Certificações</a>
+        <a href="#portfolio">Portfólio</a>
         <a href="#contato">Contato</a>
         <span class="theme-toggle" onclick="toggleTheme()">🌙</span>
       </nav>
@@ -69,21 +69,48 @@
             <li>JavaScript – Hashtag (2025)</li>
           </ul>
           <br />
+        </div>
+      </section>
 
-  <section id="habilidades">
-  <h2>Habilidades Técnicas</h2>
-  <div class="badges">
-    <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5">
-    <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3">
-    <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" alt="JavaScript">
-    <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white" alt="Python">
-    <img src="https://img.shields.io/badge/Power%20BI-F2C811?style=for-the-badge&logo=power-bi&logoColor=black" alt="Power BI">
-    <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub">
-    <img src="https://img.shields.io/badge/VS%20Code-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white" alt="VS Code">
-  </div>
-</section>
+      <!-- HABILIDADES TÉCNICAS -->
 
+      <section id="habilidades">
+        <h2>Habilidades Técnicas</h2>
+        <div class="card">
+          <div class="badges">
+            <img
+              src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+              alt="HTML5"
+            />
+            <img
+              src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+              alt="CSS3"
+            />
+            <img
+              src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+              alt="JavaScript"
+            />
+            <img
+              src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
+              alt="Python"
+            />
+            <img
+              src="https://img.shields.io/badge/Power%20BI-F2C811?style=for-the-badge&logo=power-bi&logoColor=black"
+              alt="Power BI"
+            />
+            <img
+              src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white"
+              alt="GitHub"
+            />
+            <img
+              src="https://img.shields.io/badge/VS%20Code-007ACC?style=for-the-badge&logo=visual-studio-code&logoColor=white"
+              alt="VS Code"
+            />
+          </div>
+        </div>
+      </section>
 
+      <!-- CERTIFICAÇÕES -->
 
       <section id="certificacoes">
         <h2>Certificações</h2>
